--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@tanstack/react-table": "^8.21.3",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
+    "@vercel/blob": "^2.0.0",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
