--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "db:push": "prisma db push",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
-    "db:reset": "prisma migrate reset"
+    "db:reset": "prisma migrate reset",
+    "admin:reset": "npx tsx reset-admin.ts"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
